# docker_test

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: app.py
