[tool.poetry]
name = "docker-test"
version = "0.1.0"
description = ""
authors = ["Gutto <guttolaudie@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
